# coin-futures-bot

./: .env.example  .gitignore  Dockerfile  README.md  config.env.example  docker-compose.yml  init-agent.ps1  init-db.sql  main.py  pyproject.toml  requirements.txt  setup.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  QUICK_START.md
monitoring/: prometheus.yml
scripts/: active_trader.py  auto_retrain.py  backtest.py  close_all.py  dashboard.py  grid_bot.py  improved_backtest.py  market_scanner.py  quick_backtest.py  scalper.py  setup_environment.bat  setup_environment.sh  testnet_trader.py  train.py  trend_bot.py
src/: __init__.py  config.py  main.py
src/backtest/: __init__.py  performance_metrics.py  vectorbt_engine.py  walk_forward.py
src/core/: __init__.py  message_queue.py
src/database/: __init__.py  redis_cache.py  timescale.py
src/execution/: __init__.py  binance_client.py  order_manager.py  slippage_control.py
src/features/: __init__.py  fractional_differencing.py  microstructure.py  nlp_features.py  sentiment_analysis.py  technical_indicators.py
src/infrastructure/: __init__.py  config.py  order_book_sync.py  websocket_manager.py
src/mlops/: __init__.py  mlflow_setup.py
src/modules/: __init__.py  ai_core.py  backtesting.py  data_ingestion.py  execution_engine.py  monitoring.py  risk_management.py
src/monitoring/: __init__.py  alerts.py
src/risk/: __init__.py  kelly_criterion.py  risk_limits.py  trailing_stop.py
tests/: test_risk_management.py  test_technical_indicators.py
